force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Account__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheduled SMS</relationshipLabel>
    <relationshipName>Scheduled_SMS_del</relationshipName>
    <type>Lookup</type>
</CustomField>