force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Additional_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Additional_Record_Id__c</fullName>
    <label>Additional Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>