force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__CampaignMember_Status__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__CampaignMember_Status__c</fullName>
    <label>CampaignMember Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>