force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__CampaignMembersType__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__CampaignMembersType__c</fullName>
    <label>Campaign Members Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>