force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Case__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Scheduled SMS</relationshipLabel>
    <relationshipName>Scheduled_SMS</relationshipName>
    <type>Lookup</type>
</CustomField>