force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Document_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Document_Id__c</fullName>
    <label>Attachment/Document Id</label>
    <length>94</length>
    <type>Text</type>
</CustomField>