force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__End_Date__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>