force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__IsEveryMonth__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__IsEveryMonth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Every Month ?</label>
    <type>Checkbox</type>
</CustomField>