force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__isParentRecord__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__isParentRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Incoming SMS owner in Schedule case</description>
    <label>isParentRecord</label>
    <type>Checkbox</type>
</CustomField>