force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__isSent__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__isSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSent</label>
    <type>Checkbox</type>
</CustomField>