force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Last_SMS_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Last_SMS_Sent_Date__c</fullName>
    <label>Last SMS Sent Date</label>
    <type>DateTime</type>
</CustomField>