force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Message_Text__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Message_Text__c</fullName>
    <label>Message Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>