force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Next_SMS_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Next_SMS_Send_Date__c</fullName>
    <label>Next SMS Send Date</label>
    <type>DateTime</type>
</CustomField>