force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>