force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Scheduled SMS</relationshipLabel>
    <relationshipName>Scheduled_SMS_del</relationshipName>
    <type>Lookup</type>
</CustomField>