force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Phone_Api__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Phone_Api__c</fullName>
    <label>Phone Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>