force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Scheduled_JobId__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Scheduled_JobId__c</fullName>
    <label>Scheduled JobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>