force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Scheduled_Time__c</fullName>
    <label>Scheduled Time</label>
    <type>DateTime</type>
</CustomField>