force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/fields/tdc_tsw__Sender_Number_Key__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Sender_Number_Key__c</fullName>
    <label>Sender Number Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>