force-app/main/default/objects/tdc_tsw__Scheduled_Sms__c/listViews/tdc_tsw__Sent_SMS_With_One_Job.listView-meta.xml
<ListView>
    <fullName>tdc_tsw__Sent_SMS_With_One_Job</fullName>
    <columns>NAME</columns>
    <columns>tdc_tsw__Scheduled_Time__c</columns>
    <columns>tdc_tsw__isSent__c</columns>
    <columns>tdc_tsw__SMS_Template__c</columns>
    <columns>tdc_tsw__Message_Text__c</columns>
    <columns>tdc_tsw__Last_SMS_Sent_Date__c</columns>
    <columns>tdc_tsw__Next_SMS_Send_Date__c</columns>
    <columns>tdc_tsw__Contact__c</columns>
    <columns>tdc_tsw__Lead__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>tdc_tsw__isSent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>tdc_tsw__Next_SMS_Send_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Sent SMS With One Job</label>
</ListView>